# apsit-scraper

./: .gitignore  apsit-faculty-helpdesk-n8n.json  apsit_all_links.txt  apsit_faculty_links.txt  crawler.py  env.example  pyproject.toml
scraped/: dean-academics-prof-atul-m-deshpande.md  faculty-profile.md  prof-aavani-nair.md  prof-aishwarya-londhe.md  prof-anagha-aher.md  prof-anupama-singh.md  prof-apeksha-mohite.md  prof-arathi-kamble.md  prof-archana-kotangale.md  prof-ashvini-gaikwad.md  prof-charul-singh.md  prof-deepak-khachane.md  prof-deepali-kayande-1.md  prof-dilip-kunte.md  prof-dipali-gat.md  prof-ganesh-gourshete.md  prof-gaurang-tawade.md  prof-geetanjali-kalme.md  prof-harsha-zope.md  prof-harshada-sonkamble.md  prof-harshali-bhuwad.md  prof-jayshree-jha.md  prof-k-r-jisha.md  prof-kadambari-deherkar.md  prof-kanchan-wankhede.md  prof-kedar-yeole.md  prof-komal-gujarati.md  prof-krishnapriya-s.md  prof-mahesh-pawaskar.md  prof-manasi-chouk.md  prof-manasi-patil.md  prof-manishkumar-gadle.md  prof-manjusha-adsare.md  prof-manjusha-kashilkar.md  prof-merlin-priya-jacob.md  prof-momin-umais-mukhtar-ahmad.md  prof-monali-korde.md  prof-mrityunjay-pandey.md  prof-nikhil-desai.md  prof-nikhil-khatekar.md  (+72 more)
src/: chatbot.py  find_chunks.py  ingest.py  ingest.py.backup  scraper.py  single_ingest.py
